deployment/scrumlr-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrumlr-server
spec:
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
  selector:
    app: scrumlr-server
