deployment/scrumlr-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrumlr-server-ingress
spec:
  rules:
  - host: scrumlr.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: scrumlr-server
            port:
              number: 4000
